--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--android:layout_width="match_parent" android:layout_height="match_parent">-->
-
-<!--</RelativeLayout>-->
-
-
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
 android:id="@+id/activity_main"
@@ -21,6 +14,14 @@ tools:context="com.example.amira.spectrophotometer.MainActivity">
     android:titleTextColor="@android:color/white"
     android:background="?attr/colorPrimary"
     />
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="21dp"
+        android:text="" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -30,13 +31,60 @@ tools:context="com.example.amira.spectrophotometer.MainActivity">
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="21dp"
-        android:text="TextView" />
+        android:layout_marginBottom="10dp"
+        android:id="@+id/form_layout"
+        >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="20dp"
+
+        >
+    <AutoCompleteTextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:hint="slope"
+        android:padding="10dp"
+        android:textSize="18sp"
+        android:drawablePadding="5dp"
+        android:id="@+id/slope"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="50dp"
+
+        />
+
+    <AutoCompleteTextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:hint="intercept"
+        android:padding="10dp"
+        android:textSize="18sp"
+        android:drawablePadding="5dp"
+        android:id="@+id/intercept"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:text = "Add"
+        android:layout_gravity="center"
+        android:id="@+id/add_data"
+        android:layout_marginBottom="30dp"/>
+    </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
+
+
 
 </RelativeLayout>
